--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -12,7 +12,7 @@
 
   </div>
 
-  <div class="two column doubling center aligned  ui grid">
+  <div class="two column doubling center aligned ui grid">
 
       <div class="six wide column">
         <div class="ui segment">
@@ -51,37 +51,35 @@
       </div>
   </div>
 
+  <div class="ui inverted horizontal section divider">
+      <i class="green circular basic lightning icon"></i>
+  </div>
+
   <div class="ui one column grid center aligned">
-  <div class="twelve wide column">
-    <div class="ui secondary inverted raised left aligned segment">
-        <i class="inbox icon"></i>
-        <div class="header">
-          Have you heard about our mailing list?
-        </div>
-        <p>Get all the best inventions in your e-mail every day. Sign up now!</p>
-        <div class="ui action input">
-          <input type="text" placeholder="Your email">
-          <div class="ui button">Sign Up</div>
-        </div>
-
+  <div class="fourteen wide column">
+    <div class="ui inverted segment">
+              <div class="ui form inverted">
+                <div class="ui three fields">
+                  <div class="field">
+                    <!-- <i class="big mail icon"></i> -->
+                    <h3>Want to subscribe to our newsletter?</h3>
+                  </div>
+                  <div class="field">
+                    <input type="email" placeholder="Your Email">
+                  </div>
+                  <div class="field">
+                  <button class="ui hover button">Join</button>
+                  </div>
+                </div>
+              </div>
     </div>
   </div>
   </div>
 
+  <div class="ui inverted horizontal section divider">
+      <i class="green circular basic community icon"></i>
+  </div>
 
-
-    <div class="ui two column grid">
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-        <div class="ui divider"></div>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-      </div>
-      <div class="column">
-        <a href="http://google.com" class="ui large image">
-          <img src="/img/camera-man.jpg">
-        </a>
-      </div>
-    </div>
 
 
 
