--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -1,6 +1,6 @@
 <template name="footer">
 
-    <footer class="ui green large inverted menu">
+    <footer class="ui large inverted menu">
       <a class="item" href="http://palmandplay.com" target="_blank">
         <span> Copyright &copy; PalmandPlay 2013 </span>
       </a>
