--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,16 +1,18 @@
 <template name="home">
-<div class="ui page">
 
-  <div class="ui grid center aligned ">
-    <div class="column twelve wide center aligned">
-      <h1 class="ui inverted green block header"> Meteor Semantic Boilerplate </h1>
-      <p> Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    </div>
-    <div class="ui image">
-      <img src="/img/img3.jpg" alt="" class="ui masssive image">
-    </div>
+  <div class="one column ui grid main-title">
+    <div class="CoverImage FlexEmbed FlexEmbed--3by1" style="background-image:url(/img/img16.jpg);"></div>
 
+    <div class="column page-title">
+      <div class="basic segment">
+        <div class="ui center aligned inverted header">
+         <h1>Meteor Semantic Boilerplate</h1>
+         <div class="sub header">Meteor.js + Semantic UI = LOVE</div>
+        </div>
+      </div>
+    </div>
   </div>
+
 
   <div class="two column doubling center aligned ui grid">
 
@@ -30,21 +32,21 @@
   <div class="ui three column doubling grid">
       <div class="column">
       <h2 class="ui huge center aligned icon header">
-        <i class="circular emphasized inverted green rocket icon"></i>
+        <i class="circular inverted rocket icon"></i>
         <div class="content">Meteor.js<div class="sub header">Real-Time javascript framework</div>
         </div>
       </h2>
       </div>
       <div class="column">
       <h2 class="ui huge center aligned icon header">
-        <i class="circular emphasized inverted green checkmark icon"></i>
+        <i class="circular inverted checkmark icon"></i>
         <div class="content">Semantic UI<div class="sub header">Semantic HTML for the Masses</div>
         </div>
       </h2>
       </div>
       <div class="column">
       <h2 class="ui huge center aligned icon header">
-        <i class="circular emphasized inverted green magic icon"></i>
+        <i class="circular inverted magic icon"></i>
         <div class="content">Boilerplate<div class="sub header">Custom stuff to get going</div>
         </div>
       </h2>
@@ -53,6 +55,14 @@
 
   <div class="ui inverted horizontal section divider">
       <i class="green circular basic lightning icon"></i>
+  </div>
+
+
+  <div class="ui grid center aligned ">
+    <div class="ui image">
+      <img src="/img/img3.jpg" alt="" class="ui masssive image">
+    </div>
+
   </div>
 
   <div class="ui one column grid center aligned">
@@ -83,7 +93,6 @@
 
 
 
-</div>
 
 
 </template>
