--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -6,6 +6,9 @@
 
     <title>Meteor Boilerplate with Semantic UI</title>
 
+
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Roboto+Slab:300' rel='stylesheet' type='text/css'>
+
   </head>
 
 
