--- a/client/views/test/test.html
+++ b/client/views/test/test.html
@@ -1,29 +1,38 @@
 <template name="test">
-  <div class="ui grid">
-  <div class="three wide column">
-    <div class="ui segment"><b>Column One</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum iaculis sapien.</div>
-  </div>
-  <div class="six wide column">
-    <div class="ui segment"><b>Column Two</b> Aliquam lobortis commodo sem ac accumsan. Vestibulum non faucibus lorem. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur sed lorem lorem. Nam augue erat, dignissim nec aliquam vel, congue et sapien. Integer viverra justo vel nibh suscipit commodo. Nullam ut turpis nibh, in luctus risus. Sed ut risus nec dui mattis porta. Nam nisi magna, ornare mollis congue a, suscipit at nisl.</div>
-  </div>
-  <div class="three wide column">
-    <div class="ui segment"><b>Column Three</b> Donec semper mollis condimentum. Aenean eget rutrum magna. Mauris ornare nibh scelerisque turpis lobortis dignissim. Etiam eleifend justo eget quam semper vulputate. Nulla et risus convallis velit molestie iaculis. Aliquam erat volutpat. </div>
-  </div>
-  <div class="four wide column">
-    <div class="ui segment"><b>Column Three</b> Donec semper mollis condimentum. Aenean eget rutrum magna. Mauris ornare nibh scelerisque turpis lobortis dignissim. Etiam eleifend justo eget quam semper vulputate. Nulla et risus convallis velit molestie iaculis. Aliquam erat volutpat. </div>
-  </div>
-</div>
 
-<div class="ui circular segment">
-  <h2 class="ui header">
-    Buy Now
-    <div class="sub header">$10.99</div>
-  </h2>
-</div>
-<div class="ui inverted circular segment">
-  <h2 class="ui inverted header">
-    Buy Now
-    <div class="sub header">$10.99</div>
-  </h2>
-</div>
+  <div class=" one column ui grid main-title">
+    <div class="CoverImage FlexEmbed FlexEmbed--3by1" style="background-image:url(/img/img17.jpg);"></div>
+
+    <div class="column page-title">
+      <div class="basic segment">
+        <div class="ui center aligned inverted header">
+         <h1>This is some Test Page</h1>
+         <div class="sub header">You can put any random stuff</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui grid stackable">
+
+    <div class="four wide column">
+      <div class="ui segment"><b>Column One</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum iaculis sapien.</div>
+    </div>
+    <div class="four wide column">
+      <div class="ui segment"><b>Column Two</b> Aliquam lobortis commodo sem ac accumsan. Vestibulum non faucibus lorem. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur sed lorem lorem. Nam augue erat, dignissim nec aliquam vel, congue et sapien. Integer viverra justo vel nibh suscipit commodo. Nullam ut turpis nibh, in luctus risus. Sed ut risus nec dui mattis porta. Nam nisi magna, ornare mollis congue a, suscipit at nisl.</div>
+    </div>
+    <div class="four wide column">
+      <div class="ui segment"><b>Column Three</b> Donec semper mollis condimentum. Aenean eget rutrum magna. Mauris ornare nibh scelerisque turpis lobortis dignissim. Etiam eleifend justo eget quam semper vulputate. Nulla et risus convallis velit molestie iaculis. Aliquam erat volutpat. </div>
+    </div>
+    <div class="four wide column">
+      <div class="ui segment"><b>Column Three</b> Donec semper mollis condimentum. Aenean eget rutrum magna. Mauris ornare nibh scelerisque turpis lobortis dignissim. Etiam eleifend justo eget quam semper vulputate. Nulla et risus convallis velit molestie iaculis. Aliquam erat volutpat. </div>
+    </div>
+
+  </div>
+
+
+
+
+
+
 </template>
