--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -1,29 +1,43 @@
 <template name="header">
-      <div class="ui menu">
-        <a class=" item" href="{{pathFor 'home'}}">
-          <i class="users icon"></i>
-          <span>Home</span>
-        </a>
-        <a class="item" href="{{pathFor 'portfolio'}}">
-          <i class="grid layout icon"></i><span>Portfolio</span>
-        </a>
-        <a class="item" href="{{pathFor 'contact'}}">
-          <i class="mail icon"></i><span>Contact</span>
-        </a>
-        <a class="item" href="{{pathFor 'entrySignIn'}}">
-          <i class="cloud icon"></i><span>Log In</span>
-        </a>
-
-        {{loginButtons}}
-        <div class="right menu">
-          <div class="item">
-            <div class="ui icon input">
-              <input type="text" placeholder="Search...">
-              <i class="search icon"></i>
-            </div>
-          </div>
-
+    <div class="ui vertical floating sidebar menu">
+      <a class="item" href="{{pathFor 'home'}}">
+        <i class="home icon"></i>
+        Home
+      </a>
+      <a class="item" href="{{pathFor 'portfolio'}}">
+        <i class="heart icon"></i>
+        Current Section
+      </a>
+      <a class="item" href="{{pathFor 'test'}}">
+        <i class="facebook icon"></i>
+        Like us on Facebook
+      </a>
+      <div class="item">
+        <b>More</b>
+        <div class="menu">
+          <a class="item">About</a>
+          <a class="item">Contact Us</a>
         </div>
       </div>
+    </div>
 
+
+<div class="ui fluid fixed inverted three item menu">
+  <a class="item" href="{{pathFor 'home'}}"><i class="home icon"></i>Home</a>
+  <a class="item" href="{{pathFor 'portfolio'}}"><i class="lab icon"></i>Portfolio</a>
+  <a class="item" href="{{pathFor 'test'}}"><i class="beer icon"></i>Test</a>
+</div>
+
+
+<!-- <div class="ui vertical fixed icon menu">
+  <a class="red item button">
+    <i class="mail icon"></i>
+  </a>
+  <a class="teal item">
+    <i class="lab icon"></i>
+  </a>
+  <a class="green item">
+    <i class="star icon"></i>
+  </a>
+</div> -->
 </template>
