--- a/client/views/portfolio/portfolio.html
+++ b/client/views/portfolio/portfolio.html
@@ -1,47 +1,48 @@
 <template name="portfolio">
-  <div class="ui page ">
-    <div class="ui stackable items">
-    <div class="item">
-      <div class="image">
-        <img src="/img/img1.jpg">
-        <a class="like ui corner label">
-          <i class="like icon"></i>
-        </a>
-      </div>
-      <div class="content">
-        <div class="name">This is Work number One</div>
-        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-        <div class="extra">
-            199 votes
-        </div>
-      </div>
-    </div>
-    <div class="item">
-      <div class="image">
-        <img src="/img/img2.jpg">
-        <a class="like ui corner label">
-          <i class="like icon"></i>
-        </a>
-      </div>
-      <div class="content">
-        <div class="meta">5 days ago</div>
-        <div class="name">This is Work number Two</div>
-        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-        <div class="extra">
-            311 votes
+
+  <div class=" one column ui grid main-title">
+    <div class="CoverImage FlexEmbed FlexEmbed--3by1" style="background-image:url(/img/img19.jpg);"></div>
+
+    <div class="column page-title">
+      <div class="basic segment">
+        <div class="ui center aligned header">
+         <h1>This is the portfolio page</h1>
+         <div class="sub header">Showcasing latest work stuff</div>
         </div>
       </div>
     </div>
   </div>
+
+<div class="ui connected stackable items">
+  <div class="row">
+    <div class="item">
+      <div class="image">
+        <img src="/img/img4.jpg">
+      </div>
+      <div class="content">
+        <div class="name">Work 1</div>
+        <p class="description">This dog has some things going for it. Its pretty cute and looks like it'd be fun to cuddle up with.</p>
+      </div>
+    </div>
+    <div class="item">
+      <div class="image">
+        <img src="/img/img5.jpg">
+      </div>
+      <div class="content">
+        <div class="name">Work 2</div>
+        <p class="description">Sometimes its more important to have a dog you know you can trust. But not every dog is trustworthy, you can tell by looking at its smile.</p>
+      </div>
+    </div>
+    <div class="item">
+      <div class="image">
+        <img src="/img/img6.jpg">
+      </div>
+      <div class="content">
+        <div class="name">Work 3</div>
+        <p class="description">Silly dogs can be quite fun to have as companions. You never know what kind of ridiculous thing they will do.</p>
+      </div>
+    </div>
   </div>
+</div>
+
 </template>
