--- a/client/views/accounts/shared/accountButtons.html
+++ b/client/views/accounts/shared/accountButtons.html
@@ -27,5 +27,42 @@
       <a href="/sign-up">Sign Up</a>
     {{#if wrapLinks}}</li>{{/if}}
 
+<div class="ui black buttons">
+  <div class="ui button">Save</div>
+  <div class="ui black floating dropdown icon button">
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="item"><i class="edit icon"></i>Edit Post</div>
+      <div class="item"><i class="delete icon"></i>Remove Post</div>
+      <div class="item"><i class="hide icon"></i>Hide Post</div>
+    </div>
+  </div>
+</div>
+
   {{/if}}
+
+
+  {{#if currentUser}}
+
+    {{#if profileUrl}}
+      <div class="ui dropdown item">
+        <a href="{{profileUrl}}"><i class="icon user"></i>{{signedInAs}} <i class="dropdown icon"></i></a>
+        <i class="dropdown icon"></i>
+      </div>
+      {{else}}
+      <div class="ui dropdown item">
+        <i class="icon user"></i>{{signedInAs}} <i class="dropdown icon"></i>
+      </div>
+    {{/if}}
+
+
+{{else}}
+  <div class="ui buttons">
+    {{#if profileUrl}}
+      <div class="ui button"><a href="{{profileUrl}}">{{signedInAs}}</a></div>
+    {{/if}}
+  </div>
+
+{{/if}}
 </template>
+
