--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -1,8 +1,8 @@
 <template name="footer">
 
     <footer class="ui large inverted menu">
-      <a class="item" href="http://palmandplay.com" target="_blank">
-        <span> Copyright &copy; PalmandPlay 2013 </span>
+      <a class="item" href="http://github.com/kevohagan/" target="_blank">
+        <span> Made with Love by @kevohagan </span>
       </a>
     </footer>
 
