--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -59,32 +59,15 @@
 
 
   <div class="ui grid center aligned ">
-    <div class="ui image">
-      <img src="/img/img3.jpg" alt="" class="ui masssive image">
-    </div>
-
-  </div>
-
-  <div class="ui one column grid center aligned">
-  <div class="fourteen wide column">
-    <div class="ui inverted segment">
-              <div class="ui form inverted">
-                <div class="ui three fields">
-                  <div class="field">
-                    <!-- <i class="big mail icon"></i> -->
-                    <h3>Want to subscribe to our newsletter?</h3>
-                  </div>
-                  <div class="field">
-                    <input type="email" placeholder="Your Email">
-                  </div>
-                  <div class="field">
-                  <button class="ui hover button">Join</button>
-                  </div>
-                </div>
-              </div>
+<!--     <div class="ui image">
+      <img src="/img/img80.jpg" alt="" class="ui large image">
+    </div> -->
+    <div class="ui column six wide">
+      {{>subscriber}}
     </div>
   </div>
-  </div>
+
+
 
   <div class="ui inverted horizontal section divider">
       <i class="green circular basic community icon"></i>
