added hooks + animate.css

--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -58,11 +58,15 @@
   </div>
 
 
-  <div class="ui grid center aligned ">
-<!--     <div class="ui image">
-      <img src="/img/img80.jpg" alt="" class="ui large image">
-    </div> -->
-    <div class="ui column six wide">
+  <div class="ui two column stackable center middle aligned grid ">
+
+    <div class="column">
+       <div class="ui rounded image">
+        <img src="/img/img80.jpg" alt="" class="ui large image">
+      </div>
+    </div>
+
+    <div class="column">
       {{>subscriber}}
     </div>
   </div>
