--- a/client/views/test/test.html
+++ b/client/views/test/test.html
@@ -1,5 +1,36 @@
 <template name="test">
 
+    <div class="ui vertical floating right sidebar menu">
+      <a class="item" href="{{pathFor 'home'}}">
+        <i class="home icon"></i>
+        Home
+      </a>
+      <a class="item" href="{{pathFor 'portfolio'}}">
+        <i class="heart icon"></i>
+        Current Section
+      </a>
+      <a class="item" href="{{pathFor 'test'}}">
+        <i class="facebook icon"></i>
+        Like us on Facebook
+      </a>
+      <div class="item">
+        <b>More</b>
+        <div class="menu">
+          <a class="item">About</a>
+          <a class="item">Contact Us</a>
+        </div>
+      </div>
+    </div>
+
+
+<div class="ui vertical fixed right icon menu">
+    <a class="red item button" id="btn">
+      <i class="mail icon"></i>
+    </a>
+</div>
+
+
+
   <div class=" one column ui grid main-title">
     <div class="CoverImage FlexEmbed FlexEmbed--3by1" style="background-image:url(/img/img17.jpg);"></div>
 
@@ -41,8 +72,6 @@
     </div>
 
   </div>
-
-
 
 
 
