--- a/client/views/test/test.html
+++ b/client/views/test/test.html
@@ -1,33 +1,30 @@
 <template name="test">
 
-    <div class="ui vertical floating right sidebar menu">
+    <div class="ui vertical inverted right sidebar menu">
+      <a class="header item">
+        <i class="close icon"></i>
+        Close
+      </a>
       <a class="item" href="{{pathFor 'home'}}">
         <i class="home icon"></i>
         Home
       </a>
       <a class="item" href="{{pathFor 'portfolio'}}">
-        <i class="heart icon"></i>
-        Current Section
+        <i class="lab icon"></i>
+        Portfolio
       </a>
       <a class="item" href="{{pathFor 'test'}}">
-        <i class="facebook icon"></i>
-        Like us on Facebook
+        <i class="beer icon"></i>
+        Test
       </a>
-      <div class="item">
-        <b>More</b>
-        <div class="menu">
-          <a class="item">About</a>
-          <a class="item">Contact Us</a>
-        </div>
-      </div>
+
     </div>
 
 
-<div class="ui vertical fixed right icon menu">
-    <a class="red item button" id="btn">
-      <i class="mail icon"></i>
-    </a>
-</div>
+
+    <div class="ui black large icon button" id="btn">
+      <i class="icon list layout"></i>
+    </div>
 
 
 
