changed menu to sidebar

--- a/client/views/admin/admintemplate.html
+++ b/client/views/admin/admintemplate.html
@@ -4,22 +4,36 @@
 
       <div class="two column doubling center aligned ui grid">
 
-          <div class="six wide column">
+          <div class="column">
             <div class="ui segment">
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+              <h2 class="ui huge center aligned icon header">
+                <i class="green edit icon"></i>
+                <div class="content">Edit Your Collections<div class="sub header">Using the amazing Ogno-admin Package</div>
+                </div>
+              </h2>
             </div>
           </div>
-          <div class="six wide column">
+          <div class="column">
             <div class="ui segment">
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+              <h2 class="ui huge center aligned icon header">
+                <i class="green upload icon"></i>
+                <div class="content">Upload Your Files<div class="sub header">Easily upload files with Filepicker.io</div>
+                </div>
+              </h2>
             </div>
           </div>
       </div>
 
 
     <div class="ui horizontal icon divider">
-        <i class="circular heart icon"></i>
+        <i class="red circular heart icon"></i>
     </div>
+
+        <div class="ui piled segment">
+          <h4 class="center aligned header ui">This is AdminTemplate</h4>
+          <p>You can do absolutely anything you want to customize the look and feel of this Admin section. </p>
+          <p>For more info go and checkout @matteodem's amazing package <a href="https://github.com/matteodem/meteor-ogno-admin">Ogno Admin</a> </p>
+            </div>
 
     <div class="two column doubling center aligned ui grid">
 
