--- a/client/views/accounts/shared/accountButtons.html
+++ b/client/views/accounts/shared/accountButtons.html
@@ -32,12 +32,12 @@
       <div class="menu">
         <div class="item">
         {{#if profileUrl}}
-            <a href="{{profileUrl}}"><i class="icon user"></i>{{signedInAs}} <i class="dropdown icon"></i></a>
+            <a href="{{profileUrl}}"><i class="icon user"></i> Hi, {{signedInAs}} <i class="dropdown icon"></i></a>
           {{else}}
-            <i class="icon user"></i>{{signedInAs}} <i class="dropdown icon"></i>
+            <i class="icon user"></i>Hi, {{signedInAs}} <i class="dropdown icon"></i>
         {{/if}}
         </div>
-          <a href="/sign-out" class="item"><i class="mail icon">Sign Out</i></a>
+          <a href="/sign-out" class="item red secondary"><i class="sign out icon"></i>Sign Out</a>
       </div>
 
   {{else}}
