--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="column">
+    <div class="six wide column">
       {{>subscriber}}
     </div>
   </div>
