--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -60,7 +60,7 @@
 
   <div class="ui two column stackable center middle aligned grid ">
 
-    <div class="column">
+    <div class="six wide column">
        <div class="ui rounded image">
         <img src="/img/img80.jpg" alt="" class="ui large image">
       </div>
