contact page working

--- a/client/css/global.less
+++ b/client/css/global.less
@@ -20,4 +20,13 @@ bottom: 5em;
 #btn {
   position: fixed;
   right: 0;
+  z-index: 998;
+}
+
+
+.parsley-error-list {
+color: #E81123;
+padding-left: 20px;
+margin-bottom: 15px;
+list-style: none;
 }
