--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -18,6 +18,10 @@
         <i class="beer icon"></i>
         Test
       </a>
+      <a class="item" href="{{pathFor 'contact'}}">
+        <i class="mail icon"></i>
+        Contact
+      </a>
       {{#if isInRole 'admin'}}
       <a class="item" href="{{pathFor 'admin'}}"><i class="dashboard icon"></i>Admin</a>
       {{/if}}
