--- a/client/css/global.less
+++ b/client/css/global.less
@@ -1,10 +1,22 @@
 @import 'lib/variables';
+@import 'lib/mixins';
+@import 'lib/animations';
 
+
+
+
+body {
+ font-family: 'Roboto Slab', serif;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
 
 .main-title{
   position: relative;
 }
-
 
 .page-title {
 bottom: 5em;
@@ -15,7 +27,6 @@ bottom: 5em;
     bottom: 1em;
   }
 }
-
 
 #btn {
   position: fixed;
