changed portfolio page

--- a/client/css/global.less
+++ b/client/css/global.less
@@ -3,8 +3,6 @@
 @import 'lib/animations';
 
 
-
-
 body {
  font-family: 'Roboto Slab', serif;
 }
@@ -20,7 +18,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .page-title {
 bottom: 5em;
-  position: absolute;
+position: absolute;
 
   @media @mobile {
     font-size: 1rem;
@@ -32,6 +30,7 @@ bottom: 5em;
   position: fixed;
   right: 0;
   z-index: 998;
+  margin-right: 1em;
 }
 
 
