--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
     <title>Meteor Boilerplate with Semantic UI</title>
 
    <script src="//cdnjs.cloudflare.com/ajax/libs/parsley.js/1.2.2/parsley.min.js" type="text/javascript" charset="utf-8"></script>
@@ -15,8 +15,6 @@
 
 <template name="layout">
 {{yield 'header'}}
-<div id="content">
 {{yield}}
-</div>
 {{yield 'footer'}}
 </template>
